[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Fabien Valthier", email = "hcoohb@gmail.com"},
]
dependencies = [
    "paho-mqtt",
    "psutil",
]
requires-python = ">=3.7"
license = {text = "MIT"}

[project.urls]
homepage = ""


[project.optional-dependencies]
[tool]
[tool.pdm]

[tool.pdm.dev-dependencies]
dev = [
    "black",
    "mypy",
    "flake8",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
