[project]
name = "hostmonitor"
version = "0.1"
description = "Python application to monitor sensors and others on the host"
authors = [
    {name = "Fabien Valthier", email = "hcoohb@gmail.com"},
]
dependencies = [
    "paho-mqtt",
    "psutil",
]
requires-python = ">=3.7"
license = {text = "MIT"}

[project.urls]
homepage = "https://github.com/hcoohb/hostmonitor"

[project.scripts]
hostmonitor = "hostmonitor.hostmonitor:main"

[project.optional-dependencies]
[tool]
[tool.pdm]

[tool.pdm.dev-dependencies]
dev = [
    "black",
    "mypy",
    "flake8",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
